--- a/README.mkd
+++ b/README.mkd
@@ -167,13 +167,13 @@ The recommended dump (which is a more manageable size) is available [here](https
 
 A complete dump is also available [here](https://storage.googleapis.com/sefaria-mongo-backup/dump.tar.gz). The complete dump includes the `history` collections, which contains a complete revision history of every text in our library. For many applications, this data is not relevant. We recommend using the smaller dump unless you're specifically interested in texts revision history within Sefaria.
 
-Unzip the file and extract the 'dump' folder. If you don't have an app for unzipping, this can be done from Command Prompt by navigating to the folder containing the download and using 'tar -x dump.tar.gz' or 'tar -x dump_small.tar.gz' (depending on which dump you downloaded).
+Unzip the file and extract the `dump` folder. If you don't have an app for unzipping, this can be done from Command Prompt by navigating to the folder containing the download and using `tar -x dump.tar.gz` or `tar -x dump_small.tar.gz` (depending on which dump you downloaded).
 
-This 'dump' must be restored as a MongoDB database. 
+This `dump` must be restored as a MongoDB database. 
 
 From MongoDB version 4.4, mongorestore comes separately from the MongoDB server, so if you don't already have it, you'll also need to download and unzip the [Database Tools](https://www.mongodb.com/try/download/database-tools?tck=docs_databasetools). You may then need to add its \bin\ directory to your PATH environment variables.
 
-Once you have the unzipped 'dump' and mangarestore ready; from the folder which contains `dump`, run:
+Once you have the unzipped `dump` and mangarestore ready; from the folder which contains `dump`, run:
 
     mongorestore --drop
 
